--- a/Intervalometer/app.json
+++ b/Intervalometer/app.json
@@ -26,7 +26,8 @@
       "output": "static"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-build-properties"
     ],
     "experiments": {
       "typedRoutes": true,
