--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,46 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Dependencies
 node_modules/
+.pnp
+.pnp.js
 
-# Expo
+# Production / Build
 .expo/
 dist/
 web-build/
-expo-env.d.ts
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
+# System Files
 .DS_Store
-*.pem
+Thumbs.db
 
-# local env files
-.env*.local
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# typescript
-*.tsbuildinfo
+# ANDROID SPECIFIC (Important for you)
+# ---------------------------------
+# Build outputs (Binaries, intermediate files)
+android/build/
+android/app/build/
+android/.gradle/
 
-app-example
+# Local configuration (SDK location changes per machine)
+android/local.properties
 
-# generated native folders
-/ios
-/android
+# Android Studio project files (User specific)
+android/*.iml
+android/.idea/
+android/captures/
+
+# Generated binaries (Don't commit the APKs you build!)
+*.apk
+*.aab
+
+# SECRETS (Crucial!)
+# ---------------------------------
+# Block the upload key you just generated
+my-upload-key.keystore
+*.jks
+
+# Allow the default debug keystore (safe and necessary for dev)
+!android/app/debug.keystore
